--- a/source/locale/cs_CZ/LC_MESSAGES/command-line.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/command-line.po
@@ -3,14 +3,18 @@
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
+# Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
+"PO-Revision-Date: 2018-02-20 11:33+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,9 +34,10 @@ msgid ""
 "official and therefore not in the release archive."
 msgstr ""
 "Od GLPI verze 9.2.2 jsou nástroje pro příkazový řádek poskytovány jako "
-"podporované skripty a jsou k dispozici ve složce ``scripts`` v archivu. V "
-"předchozích verzích se tyto skripty nacházely ve složce ``tools`` (nástroje)"
-" která není oficiální a proto nepřítomná v archivu s vydáním."
+"podporované skripty a jsou k dispozici ve složce ``scripts`` (skripty) v "
+"archivu. V předchozích verzích se tyto skripty nacházely ve složce ``tools``"
+" (nástroje) která není oficiální a proto není přítomná v instalačním archivu"
+" vydání."
 
 #: ../../source/command-line.rst:8
 msgid ""
@@ -40,26 +45,30 @@ msgid ""
 "default configuration disables it from command-line. To change that, set "
 "``apc.enable_cli`` to ``on`` in your APCu configuration file."
 msgstr ""
+"Pokud je v systému nainstalované APCu PHP rozšíření, nemusí se podařit ho "
+"použít z příkazového řádku, protože ve výchozím nastavení je tato možnost "
+"vypnutá. Změnit je to možné nastavením volby ``apc.enable_cli`` na ``on`` v "
+"souboru s nastaveními APCu."
 
 #: ../../source/command-line.rst:13
 msgid "Install"
-msgstr "Nainstalovat"
+msgstr "Instalace"
 
 #: ../../source/command-line.rst:15
 msgid ""
 "A PHP command line installation script is provided in the GLPI archive "
 "(``scripts/cliinstall.php``)."
 msgstr ""
-"V archivu s GLPI je poskytován instalační PHP skript pro příkazový řádek "
-"(``scripts/cliinstall.php``)."
+"V instalačním archivu GLPI je poskytován instalační PHP skript pro příkazový"
+" řádek (``scripts/cliinstall.php``)."
 
 #: ../../source/command-line.rst:17
 msgid "You have to specify at least a database name and an user:"
-msgstr "Je třeba zadat přinejmenším název databáze a uživatele:"
+msgstr "Je třeba zadat alespoň název databáze a uživatele:"
 
 #: ../../source/command-line.rst:23
 msgid "It is possible to specifiy some variables calling the script:"
-msgstr "Při vyvolání skriptu je možné určit některé proměnné:"
+msgstr "Při vyvolávání skriptu je možné nastavit několik proměnných:"
 
 #: ../../source/command-line.rst:25
 msgid "``--host`` host name (`localhost` per default),"
@@ -109,15 +118,16 @@ msgstr "Aktualizace"
 #: ../../source/command-line.rst:39
 msgid "An update script is provided as well (``scripts/cliupdate.php``)."
 msgstr ""
-"Je poskytován také skript pro aktualizaci (``scripts/cliupdate.php``)."
+"Obdobně je k dispozici také skript pro aktualizaci "
+"(``scripts/cliupdate.php``)."
 
 #: ../../source/command-line.rst:41
 msgid ""
 "There is no required arguments, just run the script so it updates your "
 "database automatically."
 msgstr ""
-"Nejsou požadovány argumenty, stačí script jen spustit a ten automaticky "
-"zaktualizuje databázi."
+"Nejsou vyžadovány žádné povinné argumenty, stačí jen spuštěním skriptu "
+"automaticky zaktualizovat databázi."
 
 #: ../../source/command-line.rst:45
 msgid "Do not forget to backup your database before any update try!"
@@ -130,7 +140,8 @@ msgstr "Možné volby pro tento příkaz jsou:"
 
 #: ../../source/command-line.rst:51
 msgid "``--config-dir`` set configuration file path to use,"
-msgstr "``--config-dir`` nastavit popis umístění souboru s nastaveními,"
+msgstr ""
+"``--config-dir`` zadat popis umístění souboru s nastaveními, který použít"
 
 #: ../../source/command-line.rst:52
 msgid ""
@@ -138,7 +149,7 @@ msgid ""
 "when working on it ;)),"
 msgstr ""
 "``--force`` vynutit aktualizaci, užitečné když se verze GLPI nezmění (slouží"
-" hlavně pro vývoj aplikace),"
+" hlavně pro vývoj aplikace samotné),"
 
 #: ../../source/command-line.rst:53
 msgid ""
