--- a/source/locale/cs_CZ/LC_MESSAGES/install/index.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/install/index.po
@@ -3,13 +3,16 @@
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -20,11 +23,11 @@ msgstr ""
 
 #: ../../source/install/index.rst:2
 msgid "Install GLPI"
-msgstr "Nainstalovat GLPI"
+msgstr "Instalace GLPI"
 
 #: ../../source/install/index.rst:4
 msgid "Proceed as follow:"
-msgstr "Pokračujte následovně:"
+msgstr "Postupujte následovně:"
 
 #: ../../source/install/index.rst:6
 msgid "Choose a version,"
@@ -36,11 +39,11 @@ msgstr "Stáhněte si archiv,"
 
 #: ../../source/install/index.rst:8
 msgid "Install :)"
-msgstr "Nainstalovat :)"
+msgstr "Nainstalujte :)"
 
 #: ../../source/install/index.rst:11
 msgid "Choose a version"
-msgstr "Zvolte verzi"
+msgstr "Volba verze"
 
 #: ../../source/install/index.rst:15
 msgid ""
@@ -55,6 +58,8 @@ msgid ""
 "GLPI follows a semantic versioning scheme, on 3 digits. The first one is the"
 " major release, the second the minor and the third the fix release."
 msgstr ""
+"GLPI používá významové schéma označování verzí, se třemi číslicemi. První je"
+" hlavní vydání, druhé dílčí a třetí opravné."
 
 #: ../../source/install/index.rst:19
 msgid ""
@@ -75,13 +80,15 @@ msgstr ""
 
 #: ../../source/install/index.rst:24
 msgid "Download"
-msgstr "Stáhnout"
+msgstr "Stažení"
 
 #: ../../source/install/index.rst:28
 msgid ""
 "On GitHub, there are always two archives named *Source code* which should "
 "not be used."
 msgstr ""
+"Na portálu GitHub jsou vždy ještě dva další archivy nazvané *Source code* "
+"(zdrojové kódy) – ty nepoužívejte."
 
 #: ../../source/install/index.rst:30
 msgid ""
@@ -105,6 +112,9 @@ msgid ""
 "Fedora, Ubuntu, ...) that you should use with your standard packages manager"
 " as usual."
 msgstr ""
+"Pro vámi používanou linuxovou distribuci (Red Hat, CentOS, Fedora, Ubuntu, "
+"atp.) mohou být k dispozici předpřipravené balíčky (otázkou je, jak "
+"aktuální), které nainstalujete pomocí správce balíčků."
 
 #: ../../source/install/index.rst:39
 msgid "GLPI installation itself is composed of three steps:"
@@ -112,25 +122,29 @@ msgstr "Instalace GLPI samotná se skládá ze tří kroků:"
 
 #: ../../source/install/index.rst:41
 msgid "Uncompress the archive in your website;"
-msgstr ""
+msgstr "Rozbalení archivu do kořenové složky vašeho webu;"
 
 #: ../../source/install/index.rst:42
 msgid ""
 "Give your webserver write access to the ``files`` and ``config`` "
 "directories;"
 msgstr ""
+"Udělení práv k zápisu do složek ``files`` a ``config`` vašemu webovému "
+"serveru:"
 
 #: ../../source/install/index.rst:43
 msgid ""
 ":doc:`launch installation wizard <wizard>` (or use the :ref:`command line "
 "installation script <cdline_install>`)."
 msgstr ""
+"Spuštění :doc:`průvodce instalací <wizard>` (nebo použití :ref:`skriptu pro "
+"instalaci z příkazového řádku <cdline_install>`)."
 
 #: ../../source/install/index.rst:45
 msgid ""
 "Once these three steps have been completed the application is ready to be "
 "used."
-msgstr ""
+msgstr "Po dokončení těchto třech kroků je aplikace připravena k používání."
 
 #: ../../source/install/index.rst:48
 msgid "Files and directories locations"
@@ -141,6 +155,9 @@ msgid ""
 "Like many other web applications, GLPI can be installed by just copying the "
 "whole directory to any web server. However, this may be less secure."
 msgstr ""
+"Jako mnoho ostatních webových aplikací, GLPI je možné nainstalovat pouhým "
+"zkopírováním celé složky na libovolný webový server. Nicméně to může být "
+"méně zabezpečené."
 
 #: ../../source/install/index.rst:54
 msgid ""
@@ -157,14 +174,20 @@ msgid ""
 "directly, best practise is to store data outside of the web root. That way, "
 "sensitive files cannot be accessed directly from the web server."
 msgstr ""
+"GLPI uchovává některá data ve složce ``files``, přístupové údaje k databázi "
+"ve složce ``config``, atd. I když GLPI poskytuje některé způsoby jak "
+"zabránit, aby k souborům mohl webový server přímo přistupovat, nejlepší je "
+"uchovávat je mimo kořenovou složku webu. Tím nemůže být k souborům s "
+"citlivým obsahem přistupováno přímo prostřednictvím webového serveru."
 
 #: ../../source/install/index.rst:58
 msgid ""
 "There are a few configuration directives you may use to achieve that "
 "(directives that are used in provided downstream packages):"
 msgstr ""
-"Je zde několik direktiv nastavení, kterými je toho možné docílit (direktivy "
-"které jsou použity v poskytnutých downstream balíčcích):"
+"Je k dispozici několik direktiv nastavení, kterými je toho možné docílit "
+"(direktivy které jsou použity v balíčcích, poskytovaných linuxovými "
+"distribucemi):"
 
 #: ../../source/install/index.rst:60
 msgid "``GLPI_CONFIG_DIR``: set path to the configuration directory;"
@@ -177,15 +200,14 @@ msgstr "``GLPI_VAR_DIR`` : nastavit popis umístění složky ``files``;"
 #: ../../source/install/index.rst:62
 msgid "``GLPI_LOG_DIR`` : set path to logs files."
 msgstr ""
-"``GLPI_LOG_DIR``: nastavit popis umístění souborů se záznamem událostí "
-"(log)."
+"``GLPI_LOG_DIR``: nastavit popis umístění souborů pro záznam událostí (log)."
 
 #: ../../source/install/index.rst:66
 msgid ""
 "There are many other configuration directives available, the ones we talked "
 "about are the main to take into account for a more secure installation."
 msgstr ""
-"Je k dispozici mnoho dalších direktiv nastavení, ty které zde byly zmíněny "
+"K dispozici je mnoho dalších direktiv nastavení, ty které zde byly zmíněny "
 "jsou hlavní, které mít na paměti pro lépe zabezpečenou instalaci."
 
 #: ../../source/install/index.rst:68
@@ -193,12 +215,16 @@ msgid ""
 "Directories choice is entirely up to you; the following example will follow "
 "the `FHS <http://www.pathname.com/fhs/>`_ recommendations."
 msgstr ""
+"Volba složek je zcela na vás. Následující příklad dodržuje doporučení "
+"standardu `FHS <http://www.pathname.com/fhs/>`_ ."
 
 #: ../../source/install/index.rst:70
 msgid ""
 "Our GLPI instance will be installed in ``/var/www/glpi``, a specific virtual"
 " host in the web server configuration will reflect this path."
 msgstr ""
+"Uváděná GLPI instance bude nainstalována do ``/var/www/glpi`` a pro toto "
+"umístění bude webovém serveru nastaven virtuální hostitel."
 
 #: ../../source/install/index.rst:72
 msgid ""
@@ -206,9 +232,10 @@ msgid ""
 " directory to this place. GLPI requires read rights on this directory to "
 "work; and write rights during the installation process."
 msgstr ""
-"Nastavení GLPI budou ukládána do ``/etc/glpi``, stačí jen na toto místo "
-"zkopírovat složku ``config``. GLPI potřebuje práva na čtení v této složce; a"
-" práva zápisu v průběhu instalace."
+"Nastavení GLPI budou ukládána do ``/etc/glpi``, stačí jen zkopírovat složku "
+"``config`` do /etc. Pro běžný provoz potřebuje GLPI v této složce pouze "
+"práva na čtení. Jen pro potřeby instalace je třeba dočasně přidat i práva "
+"pro zápis."
 
 #: ../../source/install/index.rst:74
 msgid ""
@@ -216,9 +243,8 @@ msgid ""
 "directory to this place. GLPI requires read and write rights on this "
 "directory."
 msgstr ""
-"Data GLPI budou ukládána do ``/var/lib/glpi``, stačí jen na toto místo "
-"zkopírovat složku ``files``. GLPI potřebuje práva na čtení a zápis do této "
-"složky."
+"Data GLPI budou ukládána do ``/var/lib/glpi``, stačí jen zkopírovat složku "
+"``files` do /var/lib`. GLPI potřebuje práva na čtení a zápis do této složky."
 
 #: ../../source/install/index.rst:76
 msgid ""
@@ -226,7 +252,7 @@ msgid ""
 "copy here, just create the directory. GLPI requires read and write access on"
 " this directory."
 msgstr ""
-"Záznamy události (log) v GLPI budou ukládány do ``/var/log/glpi``, není co "
+"Záznamy události (log) v GLPI budou ukládány do ``/var/log/glpi``. Není co "
 "kopírovat – stačí jen tuto složku vytvořit. GLPI potřebuje práva na čtení a "
 "zápis do této složky."
 
@@ -235,28 +261,31 @@ msgid ""
 "Following this instructions, we'll create a ``inc/downstream.php`` file into"
 " GLPI directory with the following contents:"
 msgstr ""
-"Dle těchto pokynů, bude vytvořen soubor ``inc/downstream.php`` ve složce "
-"GLPI s následujícím obsahem:"
+"Dle těchto pokynů, vytvoříme ve složce GLPI soubor ``inc/downstream.php`` s "
+"následujícím obsahem:"
 
 #: ../../source/install/index.rst:87
 msgid ""
 "GLPI packages will certainly provide a ``inc/downstream.php`` file. This one"
 " must not be edited!"
 msgstr ""
-"GLPI balíčky určitě poskytnou soubor ``inc/downstream.php``. Neupravujte ho!"
+"Balíčky s GLPI v rámci linuxové distribuce určitě poskytnou soubor "
+"``inc/downstream.php`` – neupravujte ho!"
 
 #: ../../source/install/index.rst:89
 msgid ""
 "Then, create a file in ``/etc/glpi/local_define.php`` with the following "
 "contents:"
 msgstr ""
-"Pak vytvořte soubor ``/etc/glpi/local_define.php`` s následujícím obsahem:"
+"Pak vytvoříme soubor ``/etc/glpi/local_define.php`` s následujícím obsahem:"
 
 #: ../../source/install/index.rst:101
 msgid ""
 "For GLPI prior to 9.2.2, the ``GLPI_VAR_DIR`` constant did not exist and it "
 "was required to set all paths separately:"
 msgstr ""
+"V GLPI před verzí 9.2.2 neexistovala proměnná ``GLPI_VAR_DIR`` a bylo třeba "
+"nastavovat všechny popisy umístění zvlášť:"
 
 #: ../../source/install/index.rst:126
 msgid ""
@@ -265,15 +294,16 @@ msgid ""
 ";)"
 msgstr ""
 "Složku s nastaveními GLPI není možné určit v souboru ``local_define.php`` z "
-"toho důvodu, že ten samotný bude… ve složce s nastaveními jako takové ;)"
+"toho důvodu, že ten samotný bude… až právě ve složce s nastaveními jako "
+"takové ;)"
 
 #: ../../source/install/index.rst:129
 msgid "Post installation"
-msgstr ""
+msgstr "Po instalaci"
 
 #: ../../source/install/index.rst:131
 msgid "Once GLPI has been installed, you're almost done."
-msgstr ""
+msgstr "Poté, co je GLPI nainstalované, je téměř hotovo."
 
 #: ../../source/install/index.rst:133
 msgid ""
@@ -281,6 +311,9 @@ msgid ""
 "example, you can consider adding the following to your Apache virtual host "
 "configuration (or in the ``glpi/install/.htaccess`` file):"
 msgstr ""
+"Dalším krokem by bylo zabezpečení (nebo odebrání) instalační složky. "
+"Například můžete zvážit přidání následujícího do svého nastavení Apache "
+"virtuálního hostitele (nebo do souboru ``glpi/install/.htaccess``):"
 
 #: ../../source/install/index.rst:148
 msgid ""
@@ -289,6 +322,9 @@ msgid ""
 "may have to adapt this to your needs; refer to your web server's "
 "documentation."
 msgstr ""
+"V této ukázce bude složka `install` přístupná pouze z počítače samotného a "
+"jinak zobrazí chybu. Samozřejmě si toto můžete přizpůsobit svým potřebám. "
+"Nahlédněte do dokumentace k webovému serveru, který používáte."
 
 #: ../../source/install/index.rst:151
 msgid "|ccbyncnd|"
