--- a/source/locale/cs_CZ/LC_MESSAGES/prerequisites.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/prerequisites.po
@@ -3,14 +3,18 @@
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
+# Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
+"PO-Revision-Date: 2018-02-20 11:33+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +24,7 @@ msgstr ""
 
 #: ../../source/prerequisites.rst:2
 msgid "Prerequisites"
-msgstr "Předpoklady"
+msgstr "Technické náležitosti"
 
 #: ../../source/prerequisites.rst:4
 msgid "GLPI is a Web application that will need:"
@@ -32,11 +36,11 @@ msgstr "webový server;"
 
 #: ../../source/prerequisites.rst:7
 msgid "PHP;"
-msgstr "PHP;"
+msgstr "interpret PHP;"
 
 #: ../../source/prerequisites.rst:8
 msgid "a database."
-msgstr "databáze."
+msgstr "databázi."
 
 #: ../../source/prerequisites.rst:11
 msgid "Web server"
@@ -44,7 +48,8 @@ msgstr "Webový server"
 
 #: ../../source/prerequisites.rst:13
 msgid "GLPI requires a web server that supports PHP, like:"
-msgstr "GLPI potřebuje webový server který podporuje PHP, jako například:"
+msgstr ""
+"GLPI potřebuje webový server který spolupracuje s PHP, jako například:"
 
 #: ../../source/prerequisites.rst:15
 msgid "`Apache 2 (or more recent) <http://httpd.apache.org>`_;"
@@ -60,7 +65,7 @@ msgstr "`Microsoft IIS <http://www.iis.net>`_."
 
 #: ../../source/prerequisites.rst:20
 msgid "PHP"
-msgstr "PHP"
+msgstr "Interpret PHP"
 
 #: ../../source/prerequisites.rst:22
 msgid ""
@@ -83,8 +88,7 @@ msgstr "Nezbytná rozšíření"
 #: ../../source/prerequisites.rst:31
 msgid "Following PHP extensions are required for the app to work properly:"
 msgstr ""
-"Aby aplikace fungovala správně, je zapotřebí následujících rozšíření pro "
-"PHP:"
+"Aby aplikace fungovala správně, jsou potřebná následující rozšíření pro PHP:"
 
 #: ../../source/prerequisites.rst:33
 msgid "``curl``: for CAS authentication, GLPI version check, Telemetry, ...;"
@@ -92,7 +96,7 @@ msgstr "``curl``: pro CAS ověřování, kontrolu verze GLPI, telemetrii, …;"
 
 #: ../../source/prerequisites.rst:34
 msgid "``fileinfo``: to get extra informations on files;"
-msgstr "``fileinfo``: pro získání dalších informací o souborech;"
+msgstr "``fileinfo``: pro získávání dalších informací o souborech;"
 
 #: ../../source/prerequisites.rst:35
 msgid "``gd``: to generate images;"
@@ -100,7 +104,7 @@ msgstr "``gd``: pro vytváření obrázků;"
 
 #: ../../source/prerequisites.rst:36
 msgid "``json``: to get support for JSON data format;"
-msgstr "``json``: pro získání podpory pro datový formát JSON;"
+msgstr "``json``: pro podporu datového formátu JSON;"
 
 #: ../../source/prerequisites.rst:37
 msgid "``mbstring``:  to manage multi bytes characters;"
@@ -112,11 +116,11 @@ msgstr "``mysqli``: pro připojení do a dotazování databáze;"
 
 #: ../../source/prerequisites.rst:39
 msgid "``session``: to get user sessions support;"
-msgstr "``session``: pro získání podpory uživatelských sezení;"
+msgstr "``session``: pro podporu uživatelských sezení;"
 
 #: ../../source/prerequisites.rst:40
 msgid "``zlib``: to get backup and restore database functions;"
-msgstr "``zlib``: pro získání funkcí pro zálohu a obnovu databáze;"
+msgstr "``zlib``: pro funkci zálohování a obnovu databáze;"
 
 #: ../../source/prerequisites.rst:41
 msgid "``simplexml``;"
@@ -160,7 +164,7 @@ msgstr "``imap``: slouží pro ověřování uživatelů ou sběru e-mailů;"
 
 #: ../../source/prerequisites.rst:56
 msgid "``ldap``:  use LDAP directory for authentication;"
-msgstr "``ldap``:  použít LDAP adresář pro ověřování uživatelů;"
+msgstr "``ldap``:  používání LDAP adresáře pro ověřování uživatelů;"
 
 #: ../../source/prerequisites.rst:57
 msgid "``openssl``: secured communications;"
@@ -176,7 +180,7 @@ msgid ""
 "(in french only) <http://glpi-user-"
 "documentation.readthedocs.io/fr/latest/advanced/cache.html>`_."
 msgstr ""
-"``APCu``: může být použito pro mezipaměť; krom jiného (viz `nastavení "
+"``APCu``: krom jiného, může být použito pro mezipaměť (viz `nastavení "
 "mezipaměti (pouze ve francouzštině) <http://glpi-user-"
 "documentation.readthedocs.io/fr/latest/advanced/cache.html>`_."
 
@@ -202,6 +206,9 @@ msgid ""
 "<https://mariadb.com>`_ (10.0 minimum) database servers are supported by "
 "GLPI."
 msgstr ""
+"V tuto chvíli jsou GLPI podporovány databázové servery `MySQL "
+"<https://dev.mysql.com>`_ (přinejmenším verze 5.6) a `MariaDB "
+"<https://mariadb.com>`_ (přinejmenším verze 10.0)."
 
 #: ../../source/prerequisites.rst:83
 msgid "In order to work, GLPI requires a database server."
