--- a/source/locale/cs_CZ/LC_MESSAGES/update.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/update.po
@@ -3,13 +3,16 @@
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -47,6 +50,9 @@ msgid ""
 "GLPI update process is automated. To start it, just go to your GLPI instance"
 " URI, or (recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
+"Proces aktualizace GLPI je automatizovaný. Spustíte ho přechodem na URI "
+"adresu GLPI instance, nebo (doporučeno) použitím :doc:`nástrojů pro "
+"příkazový řádek <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
@@ -60,6 +66,7 @@ msgstr ""
 msgid ""
 "Please also note the update process will automatically disable your plugins."
 msgstr ""
+"Mějte na paměti, že proces aktualizace automaticky vypne zásuvné moduly."
 
 #: ../../source/update.rst:20
 msgid ""
@@ -76,8 +83,8 @@ msgid ""
 "update, and repeat on fail."
 msgstr ""
 "Před zahájením obnovení ze zálohy ověřte, že je cílová databáze prázdná a "
-"pak se pokuste o aktualizaci. V případě nezdaru je třeba opět začít od "
-"obnovy do prázdné databáze."
+"pak teprve se pokuste o aktualizaci. V případě nezdaru je třeba opět začít "
+"od obnovy do prázdné databáze."
 
 #: ../../source/update.rst:25
 msgid "|ccbyncnd|"
