--- a/source/locale/zh-Hans/LC_MESSAGES/install/wizard.po
+++ b/source/locale/zh-Hans/LC_MESSAGES/install/wizard.po
@@ -3,13 +3,16 @@
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# liAnGjiA <liangjia@qq.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-29 06:38+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
 "Language-Team: Chinese Simplified (https://www.transifex.com/glpi/teams/87042/zh-Hans/)\n"
 "MIME-Version: 1.0\n"
@@ -151,7 +154,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:93
 msgid "Create a new database"
-msgstr ""
+msgstr "新建数据库"
 
 #: ../../source/install/wizard.rst:95
 msgid ""
@@ -165,7 +168,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:102
 msgid "Database initialization"
-msgstr ""
+msgstr "数据库初始化"
 
 #: ../../source/install/wizard.rst:104
 msgid "This step initializes the database with default values."
@@ -229,4 +232,4 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:151
 msgid "|ccbyncnd|"
-msgstr ""
+msgstr "|CC-by-NC-ND|"
