--- a/source/locale/bg_BG/LC_MESSAGES/install/wizard.po
+++ b/source/locale/bg_BG/LC_MESSAGES/install/wizard.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -9,9 +9,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Zornitsa Koleva <zornitsa.koleva@mr-bricolage.bg>, 2019\n"
 "Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
@@ -64,7 +64,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:32
 msgid "Install / Update"
-msgstr ""
+msgstr "Инсталация/Актуализиране"
 
 #: ../../source/install/wizard.rst:34
 msgid ""
@@ -81,7 +81,7 @@ msgstr ""
 
 #: ../../source/install/wizard.rst:46
 msgid ""
-"This step will check if prerequisites are met. If thery're not, it is not "
+"This step will check if prerequisites are met. If they're not, it is not "
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
 msgstr ""
@@ -89,7 +89,7 @@ msgstr ""
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
-"installation event if thery're not met."
+"installation event if they're not met."
 msgstr ""
 
 #: ../../source/install/wizard.rst:56
@@ -230,6 +230,6 @@ msgid ""
 "another user with ``super-admin`` profile."
 msgstr ""
 
-#: ../../source/install/wizard.rst:151
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
