--- a/source/locale/de_DE/LC_MESSAGES/install/wizard.po
+++ b/source/locale/de_DE/LC_MESSAGES/install/wizard.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -9,9 +9,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Stephan <stephan.rennert@web.de>, 2018\n"
 "Language-Team: German (Germany) (https://www.transifex.com/glpi/teams/87042/de_DE/)\n"
@@ -93,22 +93,16 @@ msgstr "Pürfen der Umgebung"
 
 #: ../../source/install/wizard.rst:46
 msgid ""
-"This step will check if prerequisites are met. If thery're not, it is not "
+"This step will check if prerequisites are met. If they're not, it is not "
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
 msgstr ""
-"In diesem Schritt wird geprüft, ob die Voraussetzungen erfüllt sind. Wenn "
-"nicht, ist es nicht möglich fortzufahren und eine explizite Fehlermeldung "
-"informiert Sie darüber, was falsch ist und was zu tun ist, bevor Sie es "
-"erneut versuchen."
 
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
-"installation event if thery're not met."
+"installation event if they're not met."
 msgstr ""
-"Einige Voraussetzungen sind optional. Es ist möglich, die Installation "
-"fortzusetzen, auch wenn diese Bedingungen nicht erfüllt sind."
 
 #: ../../source/install/wizard.rst:56
 msgid "Database connection"
@@ -272,6 +266,6 @@ msgstr ""
 "Bevor Sie das ``glpi``` Konto entfernen, vergewissern Sie sich bitte, dass "
 "Sie einen anderen Benutzer mit dem Profil ``super-admin``` angelegt haben."
 
-#: ../../source/install/wizard.rst:151
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
