--- a/source/locale/en_GB/LC_MESSAGES/command-line.po
+++ b/source/locale/en_GB/LC_MESSAGES/command-line.po
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,7 +32,17 @@ msgstr ""
 "versions, those scripts were present in the ``tools`` directory that is not "
 "official and therefore not in the release archive."
 
-#: ../../source/command-line.rst:8
+#: ../../source/command-line.rst:6
+msgid ""
+"Since GLPI 9.4.0, command line tools are being centralized in a console "
+"application (``bin/console``). Calling ``php bin/console`` from GLPI "
+"directory displays the list of available commands."
+msgstr ""
+"Since GLPI 9.4.0, command line tools are being centralized in a console "
+"application (``bin/console``). Calling ``php bin/console`` from GLPI "
+"directory displays the list of available commands."
+
+#: ../../source/command-line.rst:11
 msgid ""
 "If APCu is installed on your system, it may fail from command line since "
 "default configuration disables it from command-line. To change that, set "
@@ -42,108 +52,280 @@ msgstr ""
 "default configuration disables it from command-line. To change that, set "
 "``apc.enable_cli`` to ``on`` in your APCu configuration file."
 
-#: ../../source/command-line.rst:13
+#: ../../source/command-line.rst:16
+msgid "Console options"
+msgstr "Console options"
+
+#: ../../source/command-line.rst:18
+msgid "For every console command, following options are available:"
+msgstr "For every console command, following options are available:"
+
+#: ../../source/command-line.rst:20
+msgid ""
+"``--config-dir=CONFIG-DIR`` path of configuration directory to use, relative"
+" to current working directory (required only if a custom path is used)"
+msgstr ""
+"``--config-dir=CONFIG-DIR`` path of configuration directory to use, relative"
+" to current working directory (required only if a custom path is used)"
+
+#: ../../source/command-line.rst:21
+msgid "``-h``, ``--help`` displays command help"
+msgstr "``-h``, ``--help`` displays command help"
+
+#: ../../source/command-line.rst:22
+msgid ""
+"``--lang=LANG`` output language code (default value is existing GLPI "
+"\"language\" configuration or \"en_GB\")"
+msgstr ""
+"``--lang=LANG`` output language code (default value is existing GLPI "
+"\"language\" configuration or \"en_GB\")"
+
+#: ../../source/command-line.rst:23
+msgid "``-n``, ``--no-interaction`` disable command interactive questions"
+msgstr "``-n``, ``--no-interaction`` disable command interactive questions"
+
+#: ../../source/command-line.rst:24
+msgid "``--no-plugins`` disable GLPI plugins during command execution"
+msgstr "``--no-plugins`` disable GLPI plugins during command execution"
+
+#: ../../source/command-line.rst:25
+msgid "``-q``, ``--quiet`` disable command output"
+msgstr "``-q``, ``--quiet`` disable command output"
+
+#: ../../source/command-line.rst:26
+msgid ""
+"``-v|vv|vvv``, ``--verbose=VERBOSE`` verbosity level: 1 for normal output, 2"
+" for more verbose output and 3 for debug"
+msgstr ""
+"``-v|vv|vvv``, ``--verbose=VERBOSE`` verbosity level: 1 for normal output, 2"
+" for more verbose output and 3 for debug"
+
+#: ../../source/command-line.rst:31
 msgid "Install"
 msgstr "Install"
 
-#: ../../source/command-line.rst:15
+#: ../../source/command-line.rst:33
 msgid ""
-"A PHP command line installation script is provided in the GLPI archive "
-"(``scripts/cliinstall.php``)."
+"The ``php bin/console db:install`` has been made to install GLPI database in"
+" CLI mode."
 msgstr ""
-"A PHP command line installation script is provided in the GLPI archive "
-"(``scripts/cliinstall.php``)."
+"The ``php bin/console db:install`` has been made to install GLPI database in"
+" CLI mode."
 
-#: ../../source/command-line.rst:17
-msgid "You have to specify at least a database name and an user:"
-msgstr "You have to specify at least a database name and an user:"
-
-#: ../../source/command-line.rst:23
-msgid "It is possible to specifiy some variables calling the script:"
-msgstr "It is possible to specifiy some variables calling the script:"
-
-#: ../../source/command-line.rst:25
-msgid "``--host`` host name (`localhost` per default),"
-msgstr "``--host`` host name (`localhost` per default),"
-
-#: ../../source/command-line.rst:26
-msgid "``--db`` database name,"
-msgstr "``--db`` database name,"
-
-#: ../../source/command-line.rst:27
-msgid "``--user`` database user name,"
-msgstr "``--user`` database user name,"
-
-#: ../../source/command-line.rst:28
-msgid "``--pass`` database user's pasword,"
-msgstr "``--pass`` database user's pasword,"
-
-#: ../../source/command-line.rst:29 ../../source/command-line.rst:49
-msgid ""
-"``--lang`` language code to use (`fr_FR` as example). Will be set to `en_GB`"
-" per default,"
-msgstr ""
-"``--lang`` language code to use (`fr_FR` as example). Will be set to `en_GB`"
-" per default,"
-
-#: ../../source/command-line.rst:30
-msgid "``--tests`` create tests configuration file,"
-msgstr "``--tests`` create tests configuration file,"
-
-#: ../../source/command-line.rst:31
-msgid ""
-"``--force`` do not check if GLPI is already installed and drop what would "
-"exists,"
-msgstr ""
-"``--force`` do not check if GLPI is already installed and drop what would "
-"exists,"
-
-#: ../../source/command-line.rst:32 ../../source/command-line.rst:50
-msgid "``--help`` displays command help."
-msgstr "``--help`` displays command help."
-
-#: ../../source/command-line.rst:37
-msgid "Update"
-msgstr "Update"
-
-#: ../../source/command-line.rst:39
-msgid "An update script is provided as well (``scripts/cliupdate.php``)."
-msgstr "An update script is provided as well (``scripts/cliupdate.php``)."
-
-#: ../../source/command-line.rst:41
-msgid ""
-"There is no required arguments, just run the script so it updates your "
-"database automatically."
-msgstr ""
-"There is no required arguments, just run the script so it updates your "
-"database automatically."
-
-#: ../../source/command-line.rst:45
-msgid "Do not forget to backup your database before any update try!"
-msgstr "Do not forget to backup your database before any update try!"
-
-#: ../../source/command-line.rst:47
+#: ../../source/command-line.rst:35 ../../source/command-line.rst:62
+#: ../../source/command-line.rst:106
 msgid "Possible options for this command are:"
 msgstr "Possible options for this command are:"
 
-#: ../../source/command-line.rst:51
-msgid "``--config-dir`` set configuration file path to use,"
-msgstr "``--config-dir`` set configuration file path to use,"
+#: ../../source/command-line.rst:37
+msgid "``-H``, ``--db-host`` host name (`localhost` per default)"
+msgstr "``-H``, ``--db-host`` host name (`localhost` per default)"
+
+#: ../../source/command-line.rst:38
+msgid ""
+"``-P``, ``--db-port`` database port (default MySQL port if option is not "
+"defined)"
+msgstr ""
+"``-P``, ``--db-port`` database port (default MySQL port if option is not "
+"defined)"
+
+#: ../../source/command-line.rst:39
+msgid "``-d``, ``--db-name`` database name"
+msgstr "``-d``, ``--db-name`` database name"
+
+#: ../../source/command-line.rst:40
+msgid "``-u``, ``--db-user`` database user name"
+msgstr "``-u``, ``--db-user`` database user name"
+
+#: ../../source/command-line.rst:41
+msgid "``-p``, ``--db-password`` database user's pasword"
+msgstr "``-p``, ``--db-password`` database user's pasword"
+
+#: ../../source/command-line.rst:42
+msgid ""
+"``-L``, ``--default-language`` default language of GLPI (`en_GB` per "
+"default)"
+msgstr ""
+"``-L``, ``--default-language`` default language of GLPI (`en_GB` per "
+"default)"
+
+#: ../../source/command-line.rst:43
+msgid ""
+"``-f``, ``--force`` do not check if GLPI is already installed and drop what "
+"would exists"
+msgstr ""
+"``-f``, ``--force`` do not check if GLPI is already installed and drop what "
+"would exists"
+
+#: ../../source/command-line.rst:45
+msgid ""
+"If mandatory options are not specified in the command call, the console will"
+" ask for them."
+msgstr ""
+"If mandatory options are not specified in the command call, the console will"
+" ask for them."
+
+#: ../../source/command-line.rst:47 ../../source/command-line.rst:67
+#: ../../source/command-line.rst:113
+msgid "See also :ref:`console options <cdline_options>`."
+msgstr "See also :ref:`console options <cdline_options>`."
 
 #: ../../source/command-line.rst:52
-msgid ""
-"``--force`` force update, usefull when GLPI version does not change (mainly "
-"when working on it ;)),"
-msgstr ""
-"``--force`` force update, usefull when GLPI version does not change (mainly "
-"when working on it ;)),"
+msgid "Update"
+msgstr "Update"
 
-#: ../../source/command-line.rst:53
+#: ../../source/command-line.rst:54
 msgid ""
-"``--dev`` required to use a development version. Use it with caution..."
+"The ``php bin/console db:update`` has been made to update GLPI database in "
+"CLI mode from a previously installed version."
 msgstr ""
-"``--dev`` required to use a development version. Use it with caution..."
+"The ``php bin/console db:update`` has been made to update GLPI database in "
+"CLI mode from a previously installed version."
 
 #: ../../source/command-line.rst:56
+msgid ""
+"There is no required arguments, just run the command so it updates your "
+"database automatically."
+msgstr ""
+"There is no required arguments, just run the command so it updates your "
+"database automatically."
+
+#: ../../source/command-line.rst:60
+msgid "Do not forget to backup your database before any update try!"
+msgstr "Do not forget to backup your database before any update try!"
+
+#: ../../source/command-line.rst:64
+msgid ""
+"``-u``, ``--allow-unstable`` allow update to an unstable version (use it "
+"with cautions)"
+msgstr ""
+"``-u``, ``--allow-unstable`` allow update to an unstable version (use it "
+"with cautions)"
+
+#: ../../source/command-line.rst:65
+msgid ""
+"``-f``, ``--force`` force execution of update from v-1 version of GLPI even "
+"if schema did not changed"
+msgstr ""
+"``-f``, ``--force`` force execution of update from v-1 version of GLPI even "
+"if schema did not changed"
+
+#: ../../source/command-line.rst:70
+msgid "Database tools"
+msgstr "Database tools"
+
+#: ../../source/command-line.rst:73
+msgid "Database schema check"
+msgstr "Database schema check"
+
+#: ../../source/command-line.rst:74
+msgid ""
+"The ``php bin/console db:check`` command can be used to check if your "
+"database schema differs from expected one."
+msgstr ""
+"The ``php bin/console db:check`` command can be used to check if your "
+"database schema differs from expected one."
+
+#: ../../source/command-line.rst:76
+msgid "If you have any diff, output will looks like :"
+msgstr "If you have any diff, output will looks like :"
+
+#: ../../source/command-line.rst:95
+msgid "Tasks tools"
+msgstr "Tasks tools"
+
+#: ../../source/command-line.rst:98
+msgid "Task unlock"
+msgstr "Task unlock"
+
+#: ../../source/command-line.rst:100
+msgid ""
+"The ``php bin/console task:unlock`` command can be used to unlock stucked "
+"cron tasks."
+msgstr ""
+"The ``php bin/console task:unlock`` command can be used to unlock stucked "
+"cron tasks."
+
+#: ../../source/command-line.rst:104
+msgid ""
+"Keep in mind that no task should be stucked except in case of a bug or a "
+"system failure (database failure during cron execution for example)."
+msgstr ""
+"Keep in mind that no task should be stucked except in case of a bug or a "
+"system failure (database failure during cron execution for example)."
+
+#: ../../source/command-line.rst:108
+msgid "``-a``, ``--all`` unlock all tasks"
+msgstr "``-a``, ``--all`` unlock all tasks"
+
+#: ../../source/command-line.rst:109
+msgid ""
+"``-c``, ``--cycle[=CYCLE]`` execution time (in cycles) from which the task "
+"is considered as stuck (delay = task frequency * cycle)"
+msgstr ""
+"``-c``, ``--cycle[=CYCLE]`` execution time (in cycles) from which the task "
+"is considered as stuck (delay = task frequency * cycle)"
+
+#: ../../source/command-line.rst:110
+msgid ""
+"``-d``, ``--delay[=DELAY]`` execution time (in seconds) from which the task "
+"is considered as stuck (default: 1800)"
+msgstr ""
+"``-d``, ``--delay[=DELAY]`` execution time (in seconds) from which the task "
+"is considered as stuck (default: 1800)"
+
+#: ../../source/command-line.rst:111
+msgid ""
+"``-t``, ``--task[=TASK]`` ``itemtype::name`` of task to unlock (e.g: "
+"``MailCollector::mailgate``)"
+msgstr ""
+"``-t``, ``--task[=TASK]`` ``itemtype::name`` of task to unlock (e.g: "
+"``MailCollector::mailgate``)"
+
+#: ../../source/command-line.rst:116
+msgid "Migration tools"
+msgstr "Migration tools"
+
+#: ../../source/command-line.rst:119
+msgid "From MyISAM to InnoDB"
+msgstr "From MyISAM to InnoDB"
+
+#: ../../source/command-line.rst:123
+msgid ""
+"Since version 9.3.0, GLPI uses the ``InnoDB`` engine instead of previously "
+"used ``MyISAM`` engine."
+msgstr ""
+"Since version 9.3.0, GLPI uses the ``InnoDB`` engine instead of previously "
+"used ``MyISAM`` engine."
+
+#: ../../source/command-line.rst:125
+msgid ""
+"The ``php bin/console glpi:migration:myisam_to_innodb`` command can be used "
+"to migrate exiting tables to ``InnoDB`` engine."
+msgstr ""
+"The ``php bin/console glpi:migration:myisam_to_innodb`` command can be used "
+"to migrate exiting tables to ``InnoDB`` engine."
+
+#: ../../source/command-line.rst:128
+msgid "Missing timestamps builder"
+msgstr "Missing timestamps builder"
+
+#: ../../source/command-line.rst:132
+msgid ""
+"Prior to GLPI 9.1.0, fields corresponding to creation and modification dates"
+" were not existing."
+msgstr ""
+"Prior to GLPI 9.1.0, fields corresponding to creation and modification dates"
+" were not existing."
+
+#: ../../source/command-line.rst:134
+msgid ""
+"The ``php bin/console glpi:migration:build_missing_timestamps`` command can "
+"be used to rebuild missing values using available logs."
+msgstr ""
+"The ``php bin/console glpi:migration:build_missing_timestamps`` command can "
+"be used to rebuild missing values using available logs."
+
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
