--- a/source/locale/en_GB/LC_MESSAGES/update.po
+++ b/source/locale/en_GB/LC_MESSAGES/update.po
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -42,11 +42,13 @@ msgstr "backup your configuration."
 
 #: ../../source/update.rst:12
 msgid ""
-"GLPI update process is automated. To start it, just go to your GLPI instance"
-" URI, or (recommended) use the :doc:`command line tools <command-line>`."
+"First, download latest GLPI version and extract files. GLPI update process "
+"is then automated. To start it, just go to your GLPI instance URI, or "
+"(recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
-"GLPI update process is automated. To start it, just go to your GLPI instance"
-" URI, or (recommended) use the :doc:`command line tools <command-line>`."
+"First, download latest GLPI version and extract files. GLPI update process "
+"is then automated. To start it, just go to your GLPI instance URI, or "
+"(recommended) use the :doc:`command line tools <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
@@ -78,6 +80,28 @@ msgstr ""
 "Make sure your database is empty before restoring your backup and try to "
 "update, and repeat on fail."
 
-#: ../../source/update.rst:25
+#: ../../source/update.rst:28
+msgid ""
+"From the beginning, it was possible to update to any GLPI version from any "
+"older version. But this requires a lot of work to maintain such an amount of"
+" very, very old code (that can't even be tested!)..."
+msgstr ""
+"From the beginning, it was possible to update to any GLPI version from any "
+"older version. But this requires a lot of work to maintain such an amount of"
+" very, very old code (that can't even be tested!)..."
+
+#: ../../source/update.rst:30
+msgid ""
+"We've decided to support migrations from GLPI 0.80 only. If you want to "
+"update from an older version, you'll need to proceed in two steps: first "
+"updating to 9.4.x (even if any version >= 0.80 would work, it's maybe a good"
+" step to go to latest stable before), then to >= 10.x."
+msgstr ""
+"We've decided to support migrations from GLPI 0.80 only. If you want to "
+"update from an older version, you'll need to proceed in two steps: first "
+"updating to 9.4.x (even if any version >= 0.80 would work, it's maybe a good"
+" step to go to latest stable before), then to >= 10.x."
+
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
