--- a/source/locale/es_419/LC_MESSAGES/install/wizard.po
+++ b/source/locale/es_419/LC_MESSAGES/install/wizard.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -9,9 +9,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Roberto Flores <robertocarlos.floresh@gmail.com>, 2018\n"
 "Language-Team: Spanish (Latin America) (https://www.transifex.com/glpi/teams/87042/es_419/)\n"
@@ -94,21 +94,16 @@ msgstr "Controles del entorno"
 
 #: ../../source/install/wizard.rst:46
 msgid ""
-"This step will check if prerequisites are met. If thery're not, it is not "
+"This step will check if prerequisites are met. If they're not, it is not "
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
 msgstr ""
-"Este paso comprobará si se cumplen los requisitos previos. Si no lo están, "
-"no es posible continuar y un mensaje de error explícito le indicará qué es "
-"lo que está mal y qué debe hacer antes de volver a intentarlo."
 
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
-"installation event if thery're not met."
+"installation event if they're not met."
 msgstr ""
-"Algunos requisitos previos son opcionales, será posible continuar la "
-"instalación incluso si no se cumplen."
 
 #: ../../source/install/wizard.rst:56
 msgid "Database connection"
@@ -274,6 +269,6 @@ msgstr ""
 "Antes de eliminar la cuenta ``glpi``, asegúrese de haber creado otro usuario"
 " con el perfil ``super-admin``."
 
-#: ../../source/install/wizard.rst:151
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
