--- a/source/locale/fr_FR/LC_MESSAGES/install/wizard.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/wizard.po
@@ -1,20 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Anth Paw <chpego@chpego.fr>, 2018
-# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2018\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2019\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,7 +95,7 @@ msgstr "Vérification de l’environnement"
 
 #: ../../source/install/wizard.rst:46
 msgid ""
-"This step will check if prerequisites are met. If thery're not, it is not "
+"This step will check if prerequisites are met. If they're not, it is not "
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
 msgstr ""
@@ -106,7 +106,7 @@ msgstr ""
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
-"installation event if thery're not met."
+"installation event if they're not met."
 msgstr ""
 "Certains pré-requis sont optionnels, il sera alors possible de valider le "
 "formulaire même s’ils ne sont pas respectés."
@@ -279,6 +279,6 @@ msgstr ""
 "Avant de supprimer le compte ``glpi``, assurez-vous d'avoir créé un autre "
 "utilisateur avec le profil ``super-admin``."
 
-#: ../../source/install/wizard.rst:151
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
