--- a/source/locale/zh_CN/LC_MESSAGES/command-line.po
+++ b/source/locale/zh_CN/LC_MESSAGES/command-line.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -9,9 +9,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
 "Language-Team: Chinese (China) (https://www.transifex.com/glpi/teams/87042/zh_CN/)\n"
@@ -34,7 +34,14 @@ msgid ""
 msgstr ""
 "在GLPI9.2.2版本之前，命令行工具属于非官方但受支持的脚本来提供其可在``scripts``目录中找到。因不属于官方，故不再发布归档。"
 
-#: ../../source/command-line.rst:8
+#: ../../source/command-line.rst:6
+msgid ""
+"Since GLPI 9.4.0, command line tools are being centralized in a console "
+"application (``bin/console``). Calling ``php bin/console`` from GLPI "
+"directory displays the list of available commands."
+msgstr ""
+
+#: ../../source/command-line.rst:11
 msgid ""
 "If APCu is installed on your system, it may fail from command line since "
 "default configuration disables it from command-line. To change that, set "
@@ -43,97 +50,236 @@ msgstr ""
 "假如您系统中已安装了APCu依赖，由于在命令行下默认配置其为禁用状态，因此它可能会在命令行模式下失效。如需要启用，请找到APCu的配置文件中的t "
 "``apc.enable_cli`` 设为 ``on`` 启用。"
 
-#: ../../source/command-line.rst:13
+#: ../../source/command-line.rst:16
+msgid "Console options"
+msgstr ""
+
+#: ../../source/command-line.rst:18
+msgid "For every console command, following options are available:"
+msgstr ""
+
+#: ../../source/command-line.rst:20
+msgid ""
+"``--config-dir=CONFIG-DIR`` path of configuration directory to use, relative"
+" to current working directory (required only if a custom path is used)"
+msgstr ""
+
+#: ../../source/command-line.rst:21
+msgid "``-h``, ``--help`` displays command help"
+msgstr ""
+
+#: ../../source/command-line.rst:22
+msgid ""
+"``--lang=LANG`` output language code (default value is existing GLPI "
+"\"language\" configuration or \"en_GB\")"
+msgstr ""
+
+#: ../../source/command-line.rst:23
+msgid "``-n``, ``--no-interaction`` disable command interactive questions"
+msgstr ""
+
+#: ../../source/command-line.rst:24
+msgid "``--no-plugins`` disable GLPI plugins during command execution"
+msgstr ""
+
+#: ../../source/command-line.rst:25
+msgid "``-q``, ``--quiet`` disable command output"
+msgstr ""
+
+#: ../../source/command-line.rst:26
+msgid ""
+"``-v|vv|vvv``, ``--verbose=VERBOSE`` verbosity level: 1 for normal output, 2"
+" for more verbose output and 3 for debug"
+msgstr ""
+
+#: ../../source/command-line.rst:31
 msgid "Install"
 msgstr "安装"
 
-#: ../../source/command-line.rst:15
+#: ../../source/command-line.rst:33
 msgid ""
-"A PHP command line installation script is provided in the GLPI archive "
-"(``scripts/cliinstall.php``)."
-msgstr "GLPI在 (``scripts/cliinstall.php``)提供了一个PHP命令行安装脚本。"
+"The ``php bin/console db:install`` has been made to install GLPI database in"
+" CLI mode."
+msgstr ""
 
-#: ../../source/command-line.rst:17
-msgid "You have to specify at least a database name and an user:"
-msgstr "您必须至少指定一个数据库名称和一个用户:"
-
-#: ../../source/command-line.rst:23
-msgid "It is possible to specifiy some variables calling the script:"
-msgstr "有可能特别的一些变量调用脚本:"
-
-#: ../../source/command-line.rst:25
-msgid "``--host`` host name (`localhost` per default),"
-msgstr "``--host`` 主机名 (默认`localhost` 本机),"
-
-#: ../../source/command-line.rst:26
-msgid "``--db`` database name,"
-msgstr "``--db`` 数据库名称,"
-
-#: ../../source/command-line.rst:27
-msgid "``--user`` database user name,"
-msgstr "``--user`` 数据库用户名,"
-
-#: ../../source/command-line.rst:28
-msgid "``--pass`` database user's pasword,"
-msgstr "``--pass`` 数据库密码,"
-
-#: ../../source/command-line.rst:29 ../../source/command-line.rst:49
-msgid ""
-"``--lang`` language code to use (`fr_FR` as example). Will be set to `en_GB`"
-" per default,"
-msgstr "``--lang`` 语言代码 (例如`fr_FR` 代表法国). 默认语言为 `en_GB` 英语,"
-
-#: ../../source/command-line.rst:30
-msgid "``--tests`` create tests configuration file,"
-msgstr "``--tests`` 创建一个测试配置文件,"
-
-#: ../../source/command-line.rst:31
-msgid ""
-"``--force`` do not check if GLPI is already installed and drop what would "
-"exists,"
-msgstr "``--force`` 参数代表不检查GLPI是否已安装且不删除。"
-
-#: ../../source/command-line.rst:32 ../../source/command-line.rst:50
-msgid "``--help`` displays command help."
-msgstr "``--help`` 获取帮助命令或简体中文爱好者请加扣群206239089."
-
-#: ../../source/command-line.rst:37
-msgid "Update"
-msgstr "更新"
-
-#: ../../source/command-line.rst:39
-msgid "An update script is provided as well (``scripts/cliupdate.php``)."
-msgstr "更新脚本在 (``scripts/cliupdate.php``)有提供。"
-
-#: ../../source/command-line.rst:41
-msgid ""
-"There is no required arguments, just run the script so it updates your "
-"database automatically."
-msgstr "没有必要的参数，只需运行脚本，以便自动更新数据库。"
-
-#: ../../source/command-line.rst:45
-msgid "Do not forget to backup your database before any update try!"
-msgstr "在进行任何更新尝试之前，别忘记备份数据库备份数据库备份数据库!"
-
-#: ../../source/command-line.rst:47
+#: ../../source/command-line.rst:35 ../../source/command-line.rst:62
+#: ../../source/command-line.rst:106
 msgid "Possible options for this command are:"
 msgstr "本命令的可能选项是:"
 
-#: ../../source/command-line.rst:51
-msgid "``--config-dir`` set configuration file path to use,"
-msgstr "``--config-dir`` 设置配置文件路径使用,"
+#: ../../source/command-line.rst:37
+msgid "``-H``, ``--db-host`` host name (`localhost` per default)"
+msgstr ""
+
+#: ../../source/command-line.rst:38
+msgid ""
+"``-P``, ``--db-port`` database port (default MySQL port if option is not "
+"defined)"
+msgstr ""
+
+#: ../../source/command-line.rst:39
+msgid "``-d``, ``--db-name`` database name"
+msgstr ""
+
+#: ../../source/command-line.rst:40
+msgid "``-u``, ``--db-user`` database user name"
+msgstr ""
+
+#: ../../source/command-line.rst:41
+msgid "``-p``, ``--db-password`` database user's pasword"
+msgstr ""
+
+#: ../../source/command-line.rst:42
+msgid ""
+"``-L``, ``--default-language`` default language of GLPI (`en_GB` per "
+"default)"
+msgstr ""
+
+#: ../../source/command-line.rst:43
+msgid ""
+"``-f``, ``--force`` do not check if GLPI is already installed and drop what "
+"would exists"
+msgstr ""
+
+#: ../../source/command-line.rst:45
+msgid ""
+"If mandatory options are not specified in the command call, the console will"
+" ask for them."
+msgstr ""
+
+#: ../../source/command-line.rst:47 ../../source/command-line.rst:67
+#: ../../source/command-line.rst:113
+msgid "See also :ref:`console options <cdline_options>`."
+msgstr ""
 
 #: ../../source/command-line.rst:52
-msgid ""
-"``--force`` force update, usefull when GLPI version does not change (mainly "
-"when working on it ;)),"
-msgstr "``--force`` 强制更新，当GLPI版本没有更改时使用(主要是在处理时 ;)),"
+msgid "Update"
+msgstr "更新"
 
-#: ../../source/command-line.rst:53
+#: ../../source/command-line.rst:54
 msgid ""
-"``--dev`` required to use a development version. Use it with caution..."
-msgstr "``--dev`` 需要使用开发版本。小心地使用它..."
+"The ``php bin/console db:update`` has been made to update GLPI database in "
+"CLI mode from a previously installed version."
+msgstr ""
 
 #: ../../source/command-line.rst:56
+msgid ""
+"There is no required arguments, just run the command so it updates your "
+"database automatically."
+msgstr ""
+
+#: ../../source/command-line.rst:60
+msgid "Do not forget to backup your database before any update try!"
+msgstr "在进行任何更新尝试之前，别忘记备份数据库备份数据库备份数据库!"
+
+#: ../../source/command-line.rst:64
+msgid ""
+"``-u``, ``--allow-unstable`` allow update to an unstable version (use it "
+"with cautions)"
+msgstr ""
+
+#: ../../source/command-line.rst:65
+msgid ""
+"``-f``, ``--force`` force execution of update from v-1 version of GLPI even "
+"if schema did not changed"
+msgstr ""
+
+#: ../../source/command-line.rst:70
+msgid "Database tools"
+msgstr ""
+
+#: ../../source/command-line.rst:73
+msgid "Database schema check"
+msgstr ""
+
+#: ../../source/command-line.rst:74
+msgid ""
+"The ``php bin/console db:check`` command can be used to check if your "
+"database schema differs from expected one."
+msgstr ""
+
+#: ../../source/command-line.rst:76
+msgid "If you have any diff, output will looks like :"
+msgstr ""
+
+#: ../../source/command-line.rst:95
+msgid "Tasks tools"
+msgstr ""
+
+#: ../../source/command-line.rst:98
+msgid "Task unlock"
+msgstr ""
+
+#: ../../source/command-line.rst:100
+msgid ""
+"The ``php bin/console task:unlock`` command can be used to unlock stucked "
+"cron tasks."
+msgstr ""
+
+#: ../../source/command-line.rst:104
+msgid ""
+"Keep in mind that no task should be stucked except in case of a bug or a "
+"system failure (database failure during cron execution for example)."
+msgstr ""
+
+#: ../../source/command-line.rst:108
+msgid "``-a``, ``--all`` unlock all tasks"
+msgstr ""
+
+#: ../../source/command-line.rst:109
+msgid ""
+"``-c``, ``--cycle[=CYCLE]`` execution time (in cycles) from which the task "
+"is considered as stuck (delay = task frequency * cycle)"
+msgstr ""
+
+#: ../../source/command-line.rst:110
+msgid ""
+"``-d``, ``--delay[=DELAY]`` execution time (in seconds) from which the task "
+"is considered as stuck (default: 1800)"
+msgstr ""
+
+#: ../../source/command-line.rst:111
+msgid ""
+"``-t``, ``--task[=TASK]`` ``itemtype::name`` of task to unlock (e.g: "
+"``MailCollector::mailgate``)"
+msgstr ""
+
+#: ../../source/command-line.rst:116
+msgid "Migration tools"
+msgstr ""
+
+#: ../../source/command-line.rst:119
+msgid "From MyISAM to InnoDB"
+msgstr ""
+
+#: ../../source/command-line.rst:123
+msgid ""
+"Since version 9.3.0, GLPI uses the ``InnoDB`` engine instead of previously "
+"used ``MyISAM`` engine."
+msgstr ""
+
+#: ../../source/command-line.rst:125
+msgid ""
+"The ``php bin/console glpi:migration:myisam_to_innodb`` command can be used "
+"to migrate exiting tables to ``InnoDB`` engine."
+msgstr ""
+
+#: ../../source/command-line.rst:128
+msgid "Missing timestamps builder"
+msgstr ""
+
+#: ../../source/command-line.rst:132
+msgid ""
+"Prior to GLPI 9.1.0, fields corresponding to creation and modification dates"
+" were not existing."
+msgstr ""
+
+#: ../../source/command-line.rst:134
+msgid ""
+"The ``php bin/console glpi:migration:build_missing_timestamps`` command can "
+"be used to rebuild missing values using available logs."
+msgstr ""
+
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|CC-by-NC-ND|"
