--- a/source/locale/zh_CN/LC_MESSAGES/install/wizard.po
+++ b/source/locale/zh_CN/LC_MESSAGES/install/wizard.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2016-2018, GLPI Project, Teclib'
+# Copyright (C) 2016-2019, GLPI Project, Teclib'
 # This file is distributed under the same license as the GLPI package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
@@ -10,9 +10,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GLPI 9.3\n"
+"Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-29 06:38+0200\n"
+"POT-Creation-Date: 2019-12-02 07:51+0100\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: liAnGjiA <liangjia@qq.com>, 2018\n"
 "Language-Team: Chinese (China) (https://www.transifex.com/glpi/teams/87042/zh_CN/)\n"
@@ -84,16 +84,16 @@ msgstr "环境检查"
 
 #: ../../source/install/wizard.rst:46
 msgid ""
-"This step will check if prerequisites are met. If thery're not, it is not "
+"This step will check if prerequisites are met. If they're not, it is not "
 "possible to continue and an explicit error message will tell you about what "
 "is wrong and what to do before trying again."
-msgstr "这一步将检查是否满足先决条件。如果没有，就不可能继续，一个显式的错误消息将告诉您什么是错误的，以及在再次尝试之前应该做什么。"
+msgstr ""
 
 #: ../../source/install/wizard.rst:53
 msgid ""
 "Some prerequisites are optionals, it will be possible to continue "
-"installation event if thery're not met."
-msgstr "一些先决条件是可选项，即使不满足也可以继续安装。"
+"installation event if they're not met."
+msgstr ""
 
 #: ../../source/install/wizard.rst:56
 msgid "Database connection"
@@ -233,6 +233,6 @@ msgid ""
 "another user with ``super-admin`` profile."
 msgstr "在删除``glpi``帐户之前，请确保您使用``super-admin``配置文件创建了另一个用户。"
 
-#: ../../source/install/wizard.rst:151
+#: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
 msgstr "|CC-by-NC-ND|"
